Supporting websocket for AWS Codebuild logs
